--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-    "type": "module",
-    "dependencies": {
-        "csv-parse": "^5.5.6"
-    },
-    "devDependencies": {
-        "@types/bun": "latest"
-    },
-    "peerDependencies": {
-        "typescript": "^5.0.0"
-    }
+  "type": "module",
+  "dependencies": {
+    "csv-parse": "^5.5.6",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  }
 }
